# ever-vm

./: .gitignore  .gitmodules  CHANGELOG.md  CODEOWNERS  Cargo.toml  Dockerfile  Jenkinsfile  Makefile  README.md  README_private.md  build.rs  commit_hash.txt  deps_map.json
asset/: Makefile  simple.code
benches/: README  bench_diff.rs  benchmarks.rs  config-data-try-elect.boc  config-data.boc  coverage.sh  elector-actions.boc  elector-code.boc  elector-data-output.boc  elector-data.boc  prepare-linux.sh  run-deep-stack-switch.fif  run-elector-algo.fif  run-fift.sh  run-load-boc.fif  run-tiny-loop.fif  tiny-code.boc  tiny-data.boc  try-elect-actions.boc
benches/diff/: f11.txt  f12.txt  f31.txt  f32.txt  f41.txt  f42.txt
benches/massive/: BuilderLib.sol  cell-finalize-msg.boc  cell-finalize.tvc  cell-upload-msg.boc  cell-upload.tvc
benches/mergesort/: mergesort.boc  mergesort.fc  run-fift.sh  vm.patch
common/: README.md
common/config/: log_cfg.yml  log_cfg_debug.yml
common/src/: config.rs  info.rs  log.rs  test.rs
doc/: make-pdf.sh  trykeep-proposal.md  tvm.tex
src/: error.rs  lib.rs  smart_contract_info.rs  test.rs  types.rs  utils.rs
src/assembler/: complex.rs  errors.rs  macros.rs  mod.rs  parse.rs  simple.rs  writer.rs
src/executor/: accounts.rs  blockchain.rs  bls.rs  config.rs  continuation.rs  crypto.rs  currency.rs  deserialization.rs  dictionary.rs  diff.rs  dump.rs  exceptions.rs  globals.rs  math.rs  microcode.rs  mod.rs  null.rs  rand.rs  serialization.rs  slice_comparison.rs  stack.rs  tuple.rs  types.rs
src/executor/engine/: core.rs  data.rs  handlers.rs  mod.rs  storage.rs
src/executor/gas/: gas_state.rs  mod.rs
src/stack/: continuation.rs  mod.rs  savelist.rs  serialization.rs
src/stack/integer/: behavior.rs  bitlogics.rs  conversion.rs  fmt.rs  math.rs  mod.rs  traits.rs
src/stack/integer/serialization/: common.rs  mod.rs  signed_big_endian.rs  signed_little_endian.rs  unsigned_big_endian.rs  unsigned_little_endian.rs
src/stack/integer/tests/: test_conversion.rs  test_formatting.rs  (+1 more)
src/tests/: test_accounts.rs  test_dump.rs  test_error.rs  test_executor.rs  test_microfunctions.rs  test_smart_contract_info.rs  test_stack.rs
tests/: .gitignore  test.in  test_accounts.rs  test_app_specific.rs  test_assembler_executor.rs  test_binary_operations.rs  test_bls.rs  test_cell_deserialization.rs  test_cell_serialization.rs  test_compound_stack_manipulation_primitives.rs  test_config.rs  test_constant_primitives.rs  test_continuations_and_control_registres.rs  test_control_flow.rs  test_control_flow_condition.rs  test_currency.rs  test_dictionary.rs  test_dictionary_special_get.rs  test_diff.rs  test_dump.rs  test_exceptions.rs  test_exotic_stack_manipulation_primitives.rs  test_gas.rs  test_integer_arithmetic.rs  test_integer_arithmetic_division.rs  test_integer_comparisons.rs  test_library.rs  test_null.rs  test_null2.rs  test_other_comparison_operations.rs  test_push_integer_constants.rs  test_rand.rs  test_stack_manipulation.rs  test_tuple.rs  test_very_long_code.rs
tests/common/: mod.rs  test_framework.rs
tests/profiling/: prof_arith_cell_slice.ton
(+2 files in other folders)
