[package]
build = 'common/build/build.rs'
edition = '2021'
name = 'ton_vm'
version = '1.9.5'

[dependencies]
ed25519 = '1.2'
ed25519-dalek = '1.0'
failure = '0.1'
hex = '0.4'
lazy_static = '1.4'
log = '0.4'
num = '0.4'
num-traits = '0.2'
rand = '0.7'
diffy = { optional = true, version = '0.2.2' }
similar = { features = [ 'bytes' ], optional = true, version = '2.2.0' }
ton_block = { git = 'https://github.com/tonlabs/ever-block.git', tag = '1.9.121' }
ton_types = { git = 'https://github.com/tonlabs/ever-types.git', tag = '2.0.31' }
zstd = { default-features = false, optional = true, version = '0.11' }

[dev-dependencies]
criterion = '0.4'
libloading = '0.6'
log4rs = '1.2'
pretty_assertions = '1.3'
pprof = { features = [ 'criterion', 'flamegraph' ], version = '0.11' }

[features]
fift_check = [  ]
gosh = [ 'ton_block/gosh', 'diffy', 'similar', 'zstd' ]
log_file = [  ]
signature_no_check = [  ]
signature_with_id = [ 'ton_block/signature_with_id' ]
verbose = [  ]

[[bench]]
harness = false
name = 'benchmarks'

[lib]
bench = false

[profile]


