[package]
build = 'common/build/build.rs'
edition = '2021'
name = 'ever_vm'
version = '2.1.2'

[dependencies]
diffy = { optional = true, version = '0.2.2' }
ed25519 = '1.2'
ed25519-dalek = '1.0'
failure = '0.1'
hex = '0.4'
lazy_static = '1.4'
log = '0.4'
num = '0.4'
num-traits = '0.2'
rand = '0.7'
similar = { features = [ 'bytes' ], optional = true, version = '2.2.0' }
zstd = { default-features = false, optional = true, version = '0.11' }
ever_block = { git = 'https://github.com/everx-labs/ever-block.git', branch = 'feature-mesh' }

[dev-dependencies]
criterion = '0.4'
libloading = '0.6'
log4rs = '1.2'
pprof = { features = [ 'criterion', 'flamegraph' ], version = '0.11' }
pretty_assertions = '1.3'
ever_assembler = { git = 'https://github.com/everx-labs/ever-assembler.git' }

[features]
fift_check = [  ]
gosh = [ 'ever_block/gosh', 'diffy', 'similar', 'zstd' ]
log_file = [  ]
signature_no_check = [  ]
signature_with_id = [ 'ever_block/signature_with_id' ]
verbose = [  ]

[[bench]]
harness = false
name = 'benchmarks'

[lib]
bench = false

[profile]

